--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "main": "./bin/www",
   "dependencies": {
     "async": "^1.5.0",
     "body-parser": "~1.13.2",
