--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
-  "main": "./bin/www",
+  "main": "app.js",
   "dependencies": {
     "async": "^1.5.0",
     "body-parser": "~1.13.2",
